<resources>
    <string name="app_name">Mbah Laptop</string>
    <string name="intro_welcome">Welcome To Mbah Laptop</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="error_email_invalid">Invalid email format</string>
    <string name="email">Email</string>
    <string name="error_password_invalid">Password must be at least 8 characters</string>
    <string name="password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_predict">Predict</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="mbah_laptop_image">Mbah Laptop Image</string>
    <string name="or">OR</string>
    <string name="logout">Logout</string>
    <string name="error_login_invalid">Invalid Username or Password. \nPlease Try Again</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="prediction_date">Prediction Date</string>
    <string name="processor">Processor :</string>
    <string name="intel_amd">INTEL/AMD</string>
    <string name="x_gb">X GB</string>
    <string name="prediction_detail">Prediction Detail</string>
    <string name="insert_your_laptop_spesification_below">Insert your laptop spesification below</string>
    <string name="os_type">OS Type</string>
    <string name="processor_type">Processor Type</string>
    <string name="gpu_type">GPU Type</string>
    <string name="ram_size_hint">Ram Size</string>
    <string name="storage_type">Storage Type</string>
    <string name="storage_size">Storage Size</string>
    <string name="screen_resolution">Screen Resolution</string>
    <string name="predict_price">Predict Price</string>
    <string name="username">Username</string>
    <string name="preferences">Preferences</string>
    <string name="guest">Guest</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="mac_windows">MAC/Windows</string>
    <string name="user_setting">User Setting</string>
    <string name="predicted_price_result">Predicted Price Result</string>
    <string name="predicted_price">Predicted Price</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="operating_system_hint">Operating System</string>
    <string name="processor_hint">Processor</string>
    <string name="gpu_hint">GPU</string>
    <string name="hd_fhd_2k">HD+/FHD/2K</string>
    <string name="hdd_ssd">HDD/SSD</string>
    <string name="lowest_predicted_price">Lowest Predicted Price</string>
    <string name="rp0_000_000">Rp0.000.000</string>
    <string name="highest_predicted_price">Highest Predicted Price</string>
    <string name="lowest_price_recommendation">Lowest Price Recommendation</string>
    <string name="highest_price_recommendation">Highest Price Recommendation</string>
    <string name="laptop_name">Laptop Name</string>
    <string name="price">Price</string>
    <string name="powered_by_machine_learning">Powered by Machine Learning</string>
    <string name="try_now">Try Now</string>
    <string name="latest_news">Latest News</string>
    <string name="fields_empty_warning">Please fill all the fields</string>
    <string name="about_app">
        This application is designed to predict laptop prices based on specifications provided by users.
        It was developed by a team of seven members from the Bangkit Academy, combining expertise from three
        specialized learning paths: Machine Learning, Cloud Computing, and Mobile Development.
    </string>
    <string name="about_app_title">About App</string>
    <string name="profile_image">Profile Image</string>
    <string name="team">Team</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="since_2024">Since 2024</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="title_prediction">Price Prediction</string>
    <string name="title_prediction_history">Prediction History</string>
    <string name="english">English</string>
    <string name="indonesia">Bahasa Indonesia</string>
    <string name="title_language_setting">Language Setting</string>
    <string name="email_registered_error">This email is already registered!</string>
    <string name="signed_out_success">Signed out successfully</string>
    <string name="no_history_detected">No History Detected</string>
    <string name="price_range">%1$s - %2$s</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="mobile_development">Mobile Development</string>
    <string name="cloud_computing">Cloud Computing</string>
    <string name="specs">Specs</string>
    <string name="predicted_price_format">Predicted Price: %1$s</string>
    <string name="specs_format">Specs: %1$s, %2$s, %3$s</string>
    <string name="data_management">Data Management</string>
    <string name="title_news">News</string>
    <string name="get_the_best_price_for_your_laptop">Get the best price for your laptop</string>
    <string name="sign_up_or_login_bellow_to_to_start_predict_your_laptop_price_now">Sign up or login bellow to start predict your laptop price now</string>
    <string name="get_started">Get Started</string>
    <string name="login_with_google">Login with Google</string>
    <string name="or_continue_with_email">or continue with email</string>
    <string name="instant_prediction">Instant Prediction</string>
    <string name="instant_prediction_desc">Get a quick estimate on how much you can sell or buy your laptop for</string>
    <string name="full_specs_analysis">Full Specs Analysis</string>
    <string name="full_spec_analysis_desc">We\'ll analyze every spec and give you a detailed report</string>
    <string name="predict_the_price_of_laptops_with_your_prefered_spesification">Predict the price of laptops with your preferred spesification.</string>
    <string name="delete_history_message">Are you sure you want to delete all prediction history?</string>
    <string name="yes">YES</string>
    <string name="cancel">Cancel</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="clear_prediction_history">Clear Prediction History</string>
    <string name="recent_prediction">Recent Prediction</string>
    <string name="see_all">See All</string>
    <string name="login_to_account">Login to Account</string>
    <string name="processor_brand">Processor Brand</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
</resources>