<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:paddingBottom="32dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/laptop"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

                <TextView
                    android:id="@+id/tv_result_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:text="@string/predicted_price"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="4dp"
                    android:text="@string/predicted_price_result"
                    android:textSize="12sp" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/prediction_detail"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_weight="5"
                        android:paddingVertical="6dp">

                        <TextView
                            android:layout_weight="2"
                            android:text="@string/prediction_date" />

                        <TextView
                            android:id="@+id/tv_result_time"
                            android:layout_weight="3"
                            android:gravity="end"
                            android:text="@string/dd_mm_yyyy" />
                    </TableRow>

                    <TableRow
                        android:layout_weight="5"
                        android:paddingVertical="6dp">

                        <TextView
                            android:layout_weight="2"
                            android:text="@string/operating_system_hint" />

                        <TextView
                            android:id="@+id/tv_result_os"
                            android:layout_weight="3"
                            android:gravity="end"
                            android:text="@string/mac_windows" />
                    </TableRow>

                    <TableRow
                        android:layout_weight="5"
                        android:paddingVertical="6dp">

                        <TextView
                            android:layout_weight="2"
                            android:text="@string/processor_hint" />

                        <TextView
                            android:id="@+id/tv_result_processor"
                            android:layout_weight="3"
                            android:gravity="end"
                            android:text="@string/intel_amd" />
                    </TableRow>

                    <TableRow
                        android:layout_weight="5"
                        android:paddingVertical="6dp">

                        <TextView
                            android:layout_weight="2"
                            android:text="@string/gpu_hint" />

                        <TextView
                            android:id="@+id/tv_result_gpu"
                            android:layout_weight="3"
                            android:gravity="end"
                            android:text="@string/intel_amd" />
                    </TableRow>

                    <TableRow
                        android:layout_weight="5"
                        android:paddingVertical="6dp">

                        <TextView
                            android:layout_weight="2"
                            android:text="@string/ram_size_hint" />

                        <TextView
                            android:id="@+id/tv_result_ram"
                            android:layout_weight="3"
                            android:gravity="end"
                            android:text="@string/x_gb" />
                    </TableRow>

                    <TableRow
                        android:layout_weight="5"
                        android:paddingVertical="6dp">

                        <TextView
                            android:layout_weight="2"
                            android:text="@string/storage_type" />

                        <TextView
                            android:id="@+id/tv_result_storage_type"
                            android:layout_weight="3"
                            android:gravity="end"
                            android:text="@string/hdd_ssd" />
                    </TableRow>

                    <TableRow
                        android:layout_weight="5"
                        android:paddingVertical="6dp">

                        <TextView
                            android:layout_weight="2"
                            android:text="@string/storage_size" />

                        <TextView
                            android:id="@+id/tv_result_storage_size"
                            android:layout_weight="3"
                            android:gravity="end"
                            android:text="@string/x_gb" />
                    </TableRow>

                    <TableRow
                        android:layout_weight="5"
                        android:paddingVertical="4dp">

                        <TextView
                            android:layout_weight="2"
                            android:text="@string/screen_resolution" />

                        <TextView
                            android:id="@+id/tv_result_resolution"
                            android:layout_weight="3"
                            android:gravity="end"
                            android:text="@string/hd_fhd_2k" />
                    </TableRow>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_height="1dp"
                        android:layout_marginVertical="8dp" />

                    <TableRow
                        android:layout_weight="5"
                        android:paddingVertical="8dp">

                        <TextView
                            android:layout_weight="2"
                            android:text="@string/lowest_predicted_price"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_result_lowest_price"
                            android:layout_weight="3"
                            android:gravity="end"
                            android:text="@string/rp0_000_000"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_weight="5"
                        android:paddingVertical="8dp">

                        <TextView
                            android:layout_weight="2"
                            android:text="@string/highest_predicted_price"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_result_highest_price"
                            android:layout_weight="3"
                            android:gravity="end"
                            android:text="@string/rp0_000_000"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lowest_price_recommendation"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="4dp">

            <include layout="@layout/laptop_row" />

            <include layout="@layout/laptop_row" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/highest_price_recommendation"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="4dp">

            <include layout="@layout/laptop_row" />

            <include layout="@layout/laptop_row" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>