<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.reza.mbahlaptop.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_predict"
        android:name="com.reza.mbahlaptop.ui.main.predict.PredictFragment"
        android:label="@string/title_predict"
        tools:layout="@layout/fragment_predict" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.reza.mbahlaptop.ui.main.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
</navigation>