<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_member_profile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/profile_image"
        android:scaleType="centerCrop"
        android:src="@drawable/filled_account_circle_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

    <TextView
        android:id="@+id/tv_member_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:text="@string/name"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_member_role"
        app:layout_constraintStart_toEndOf="@+id/iv_member_profile"
        app:layout_constraintTop_toTopOf="@+id/iv_member_profile" />

    <TextView
        android:id="@+id/tv_member_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/role"
        android:textColor="#757575"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_member_profile"
        app:layout_constraintStart_toEndOf="@id/iv_member_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_member_name" />

    <TextView
        android:id="@+id/tv_since"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/since_2024"
        android:textColor="#757575"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>