<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_history_image"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:src="@drawable/laptop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Small" />

    <View
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/iv_history_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_history_image"
        app:layout_constraintTop_toTopOf="@+id/iv_history_image" />

    <TextView
        android:id="@+id/tv_cpu_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:text="@string/processor_type"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/iv_history_image" />

    <TextView
        android:id="@+id/tv_price_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:text="@string/predicted_price"
        android:textColor="@color/non_active"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/iv_history_image"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <TextView
        android:id="@+id/tv_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:text="@string/prediction_date"
        android:textColor="@color/non_active"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>